<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    android:fillViewport="true"
    tools:context=".activities.LoginActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.LoginActivity">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/login_edit_text_padding_horizontal"
            android:textSize="@dimen/text_m_size"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/login_edit_text_padding_horizontal"
            android:textSize="@dimen/text_m_size"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_m_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/login_sign_in_button"
            android:textColor="@color/white"
            android:textSize="@dimen/text_m_size"
            app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonLoginWithGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonLoginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_sm_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_ripple_google"
            android:text="@string/login_with_google_button"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sm_size"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_m_height"
            android:background="@drawable/button_ripple"
            android:text="@string/login_sign_up_button"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sm_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


